Modifiche prima visione

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -40,3 +40,12 @@
   Year                     = {2013/2014}
 }
 
+@Article{article:models,
+  author       = {Claudio Bosco, Stefano Olivieri},
+  title        = {Climate Change, Impacts and Adaptation Strategies in the Alpine Space},
+  journaltitle = {Strategic INTERREG III B Project CLIMCHALP},
+  year         = {2008},
+  date         = {2008-01-29},
+}
+
+@Comment{jabref-meta: databaseType:biblatex;}
