--- a/Capitoli/Appendice.tex
+++ b/Capitoli/Appendice.tex
@@ -4,8 +4,9 @@
 % !TEX spellcheck = it-IT
 
 %************************************************
-\chapter{Appendice}
+
+\chapter{Estendere le funzionalità del plugin}
 \label{cap:appendice}
 %************************************************
 
-\section{Strutturare un plugin}
+\section{Struttura del plugin}
