--- a/Tesi.tex
+++ b/Tesi.tex
@@ -94,6 +94,8 @@
 \input{MaterialeInizialeFinale/Introduzione}
 \input{Capitoli/Descrizione_approfondita}
 \input{Capitoli/Realizzazione}
+\appendix
+\input{Capitoli/Appendice}
 
 % \appendix
 % \input{Capitoli/Appendice}
