Fix logo and year of the tesi

--- a/MaterialeInizialeFinale/Frontespizio.tex
+++ b/MaterialeInizialeFinale/Frontespizio.tex
@@ -8,10 +8,10 @@
 %*******************************************************
 \begin{frontespizio}
 \Universita{Venezia}
-\Logo{unive_logo}
+\Logo{unive_logo.jpg}
 \Dipartimento{Scienza Ambientali, Informatiche e Statistiche}
 \Corso[Laurea]{Informatica}
-\Annoaccademico{2015--2016}
+\Annoaccademico{2016--2017}
 \Titoletto{Tesi di laurea}
 \Titolo{Titolo}
 \Sottotitolo{Sottotitolo}
