--- a/Tesi-frn.tex
+++ b/Tesi-frn.tex
@@ -10,10 +10,10 @@
 \nofiles 
 \fontoptionnormal 
 \Universita {Venezia}
-\Logo [1.5cm]{unive_logo}
+\Logo [1.5cm]{unive_logo.jpg}
 \Dipartimento {Scienza Ambientali, Informatiche e Statistiche}
 \Corso [Laurea]{Informatica}
-\Annoaccademico {2015--2016}
+\Annoaccademico {2016--2017}
 \Titoletto {Tesi di laurea}
 \Titolo {Titolo}
 \Sottotitolo {Sottotitolo}
